package models

import "github.com/google/uuid"

type ResourceProperty struct {
	BaseModel
	ResourceID  uuid.UUID `gorm:"type:uuid;not null" json:"resource_id"`
	Resource    Resource  `gorm:"foreignKey:ResourceID" json:"resource,omitempty"`
	Price       float32   `gorm:"not null" json:"price"`
	MaxDuration uint      `json:"max_duration"`
}

type ResourceQuantity struct {
	BaseModel
	OrganizationQuotaID *uuid.UUID       `gorm:"type:uuid;index" json:"organization_quota_id,omitempty"`
	ProjectQuotaID      *uuid.UUID       `gorm:"type:uuid;index" json:"project_quota_id,omitempty"`
	NamespaceQuotaID    *uuid.UUID       `gorm:"type:uuid;index" json:"namespace_quota_id,omitempty"`
	Quantity            uint             `json:"quantity"`
	ResourcePropID      uuid.UUID        `gorm:"type:uuid;not null;index" json:"resource_property_id"`
	ResourceProp        ResourceProperty `gorm:"foreignKey:ResourcePropID" json:"resource_prop"`
}

type OrganizationQuota struct {
	BaseModel
	Name        string             `json:"name"`
	Description string             `json:"description"`
	NodeID      uuid.UUID          `gorm:"type:uuid;not null" json:"node_id"`
	FromOrgID   uuid.UUID          `gorm:"type:uuid;not null" json:"from_organization_id"`
	ToOrgID     uuid.UUID          `gorm:"type:uuid;not null" json:"to_organization_id"`
	FromOrg     Organization       `gorm:"foreignKey:FromOrgID" json:"from_organization,omitempty"`
	ToOrg       Organization       `gorm:"foreignKey:ToOrgID" json:"to_organization,omitempty"`
	Resources   []ResourceQuantity `gorm:"foreignKey:OrganizationQuotaID" json:"resources"`
}

type ProjectQuota struct {
	BaseModel
	Name                string             `json:"name"`
	Description         string             `json:"description"`
	OrganizationID      uuid.UUID          `gorm:"type:uuid" json:"organization_id"`
	OrganizationQuotaID *uuid.UUID         `gorm:"type:uuid" json:"organization_quota_id"`
	ProjectID           uuid.UUID          `gorm:"type:uuid;not null" json:"project_id"`
	NodeID              uuid.UUID          `gorm:"type:uuid;not null" json:"node_id"`
	Project             Project            `gorm:"foreignKey:ProjectID" json:"-"`
	Resources           []ResourceQuantity `gorm:"foreignKey:ProjectQuotaID" json:"resources"`
}

type NamespaceQuota struct {
	BaseModel
	Name           string                   `json:"name"`
	Description    string                   `json:"description"`
	ProjectID      *uuid.UUID               `gorm:"type:uuid;index" json:"project_id"`
	ProjectQuotaID *uuid.UUID               `gorm:"type:uuid;index" json:"project_quota_id"`
	NodeID         uuid.UUID                `gorm:"type:uuid;not null;index" json:"node_id"`
	Node           ResourceNode             `gorm:"foreignKey:NodeID" json:"-"`
	Templates      []NamespaceQuotaTemplate `gorm:"many2many:namespace_quota_template_relations;" json:"-"`
	Resources      []ResourceQuantity       `gorm:"foreignKey:NamespaceQuotaID" json:"resources"`
}

type NamespaceQuotaTemplate struct {
	BaseModel
	Name        string           `json:"name"`
	Description string           `json:"description"`
	ProjectID   uuid.UUID        `gorm:"type:uuid;not null" json:"project_id"`
	Project     Project          `gorm:"foreignKey:ProjectID" json:"-"`
	Quotas      []NamespaceQuota `gorm:"many2many:namespace_quota_template_relations;" json:"quotas"`
	Namespaces  []Namespace      `gorm:"foreignKey:QuotaTemplateID;" json:"-"`
}
